	  Fixed AND, OR operator bug.
	  Fixed TVLCT bug.
	  @file now honors !PATH.
	  Changed configure.in to support python on OS X (fink)
	  Added SETENV, STRUCT_ASSIGN pro.
	  Added GETENV, STREGEX, TAG_NAMES functions.
	  Minor adjustments of default output (no FORMAT keyword).
	  Widen struct tag name rules: "!", "!$" and "!TEXT" are
	  allowed.
	  System variables can be named "!$", or "!$TEXT".
	
0.8.9:    Added SPAWN, WAIT procedure.
	  Added FINITE, ROUTINE_INFO, TEMPORARY functions.	
	  Added DIST function and TVSCL procedure (as .pro files).
	  !EXCEPT system variable.
	  Changed common block compilation.	  
	  Allow RETURN as jump label (remove it from reserved words)
	  Allow library functions to return their own parameters if used
	  in a return statement.
	  Allow library functions as l-functions.
	  Fixed assignment to indexed array at one position (insert at) for
	  indices which are 0.
	  Cleaned up Compiler/Interpreter.
	  Added NAN keywords to BYTSCL, MIN, MAX.
	  Added SUBSCRIPT_MIN/MAX keywords to MAX/MIN.
	  Added NTOHL, NTOHS, HTONL, HTONS keywords to BYTEORDER.
	  Added z-buffer device
	  Fixed MOD division by zero for integers.
	  Support for files with main programs.
	  Fixed COMMON and GOTO for interactive use.	
	  Added .RUN command
	  True color support for TV (X-device).
	  
0.8.10:   Optimization (~10%): Arrayindexing, non-copy constants, 
	  Complex (pow, abs).
	  Optimization (>200%): Dedicated ProgNodes for compiled programs
	  Fixed RETURN statement in FOR loops.
	  Made GDL buildable as a python module.
	  .RUN handle files without subroutines.
	  GCC 4.0 compilance.
	  INTERPOLATE function.
	  Fixed eof detection on input.
	  Implemented strided index support.
	  Improved raise to power (^ operator) for integer types.

0.8.11:   Added CONTOUR procedure.
          Added RADON function.
 	  Added STRUCTURES keyword to HELP.
	  Added NAN keyword to TOTAL.
          Faster array indexing.
	  Much faster operators (+-/*^...)