@@ -138,8 +138,9 @@
 	  Improved raise to power (^ operator) for integer types.
 
 0.8.11:   Added CONTOUR procedure.
-          Added RADON function.
+          Added RADON, STRCMP functions.
  	  Added STRUCTURES keyword to HELP.
 	  Added NAN keyword to TOTAL.
           Faster array indexing.
 	  Much faster operators (+-/*^...)
+	
